src/FinancialForce Accounting/objects/codaJournalLineItem__c.object
<CustomObject>
    <customHelpPage>codahelpjournal</customHelpPage>
    <description>Stores the details of the journal lines.</description>
    <fields>
        <fullName>AccountAnalysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Analysis</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Journal Line Items (Account Analysis)</relationshipLabel>
        <relationshipName>JournalLineItemsAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountValue__c</fullName>
        <description>The value in account currency</description>
        <label>Override Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A journal line may refer to an account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccountValue__c</fullName>
        <description>The value in bank currency</description>
        <label>Override Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A journal line may refer to a bank</description>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DebitCredit__c</fullName>
        <label>Debit/Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeriveLineNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Journal Line Items (Destination Company)</relationshipLabel>
        <relationshipName>Journal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationLineType__c</fullName>
        <label>Destination Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account - Customer</fullName>
                </value>
                <value>
                    <fullName>Account - Vendor</fullName>
                </value>
                <value>
                    <fullName>General Ledger Account</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Product - Purchases</fullName>
                </value>
                <value>
                    <fullName>Product - Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dimension1Value__c</fullName>
        <description>The value in dimension currency</description>
        <label>Override Dimension 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2Value__c</fullName>
        <description>The value in dimension currency</description>
        <label>Override Dimension 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3Value__c</fullName>
        <description>The value in dimension currency</description>
        <label>Override Dimension 3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DualRate__c</fullName>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualValue__c</fullName>
        <description>The value in dual currency</description>
        <label>Override Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccountValue__c</fullName>
        <label>Override General Ledger Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A journal line always refers to a GLA</description>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HomeValue__c</fullName>
        <description>The value in home currency</description>
        <label>Override Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JournalRate__c</fullName>
        <label>Journal Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <description>A journal consists of a set of journal lines</description>
        <label>Journal</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LineDescription__c</fullName>
        <description>A reference linking matched lines</description>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <description>Every journal line must have a line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account - Customer</fullName>
                </value>
                <value>
                    <fullName>Account - Vendor</fullName>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
                <value>
                    <fullName>General Ledger Account</fullName>
                </value>
                <value>
                    <fullName>Product - Purchases</fullName>
                </value>
                <value>
                    <fullName>Product - Sales</fullName>
                </value>
                <value>
                    <fullName>Tax Code</fullName>
                </value>
                <value>
                    <fullName>Intercompany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalGLAValue__c</fullName>
        <label>Override Local GLA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Journal Line Items (Local GLA)</relationshipLabel>
        <relationshipName>BalancingJournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductAnalysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Analysis</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Journal Line Items (Product Analysis)</relationshipLabel>
        <relationshipName>JournalLineItemsPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A journal line may refer to a product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxAnalysis1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Analysis</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Journal Line Items (Tax Analysis)</relationshipLabel>
        <relationshipName>JournalLineItemsTA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxAnalysis2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Analysis 2</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Journal Line Items (Tax Analysis 2)</relationshipLabel>
        <relationshipName>JournalLineItemsTA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxAnalysis3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Analysis 3</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Journal Line Items (Tax Analysis 3)</relationshipLabel>
        <relationshipName>JournalLineItemsTA3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A journal line may refer to a tax code</description>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Journal Line Items</relationshipLabel>
        <relationshipName>JournalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxValue1__c</fullName>
        <label>Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue3__c</fullName>
        <label>Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxableValue__c</fullName>
        <label>Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The value in document currency</description>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VendorValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The value in vendor currency</description>
        <label>Vendor Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearEndCriterionIdentifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Year End Criteria Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Journal Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Journal Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>